--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <link rel="stylesheet" href="style.css" type="text/css">
     </head>
     <body>
-        <h1>Ugly Webby</h1>
-        <div>
-            <h3>Some lorem ipsum.</h3>
+        <h1>Webby</h1>
+        <div> 
+            <h3 id="all-greens">Some lorem ipsum.</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi consequuntur rem amet. Consequuntur aliquid quam nesciunt dignissimos quaerat. <cite>At quos minus aliquam esse maiores? Autem sunt odio dolores accusamus fugit!<cite></p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima unde <em>culpa</em> impedit quas iusto ipsam recusandae obcaecati. Eveniet maxime autem blanditiis eos. Veniam alias sapiente error a voluptas voluptate illo.</p>
         </div>
@@ -16,23 +16,23 @@
         </div>
         <div>
 
-            <h3>Some arguments.</h3>
+            <h3 id="another-one">Some arguments.</h3>
             
-            <ul>
-                <li>This is an argument.</li>
-                <li>This is a counterpoint!</li>
-                <li>But holy $#!%, <strong>this</strong> argument blows the other arguments away.</li>
-                <li>The first two arguments are now disproven af.</li>
+            <ul id="ugly"> 
+                <li id="another-one">This is an argument.<li>
+                <li id="more-ugly">This is a counterpoint!</li>
+                <li id="another-one">But holy $#!%, <strong>this</strong> argument blows the other arguments away.</li>
+                <li id="more-ugly">The first two arguments are now disproven af.</li>
             </ul>
         </div>
-        <div>
+        <div id="more-ugly">
             <h3>How many things are there?</h3>
             <ol>
-                <li>Thing 1.</li>
+                <li id="more-ugly">Thing 1.</li>
                 <li>Thing 2.</li>
-                <li>Thing C.</li>
+                <li id="ugly">Thing C.</li>
                 <li>Thing 4th, the 4th thing.</li>
-                <li>Thing 1 again.</li>
+                <li id="another-one">Thing 1 again.</li>
             </ol>
         </div>
         <form>
